cpp/src/parquet/schema.cc
@@ -28,7 +28,7 @@
 
 #include "parquet/exception.h"
 #include "parquet/schema_internal.h"
-#include "parquet/thrift.h"
+#include "parquet/thrift_internal.h"
 
 using parquet::format::SchemaElement;
 
